added inclusivecon bib, gantt screenshot

--- a/references.bib
+++ b/references.bib
@@ -46,7 +46,7 @@ series = {CRC Data Science}
     journal = {Journal of Open Research Software},
     volume = 3, 
     issue = 1, 
-    doi = {https://doi.org/10.5334/jors.bu}
+    doi = {10.5334/jors.bu}
     }
 
 
@@ -131,3 +131,13 @@ doi={10.1038/sdata.2016.18},
 url={https://doi.org/10.1038/sdata.2016.18}
 }
 
+@misc{inclusivecon,
+  title={Ten simple rules to host an inclusive conference},
+  author={Joo, Roc{\'\i}o and S{\'a}nchez-Tapia, Andrea and Mortara, Sara and Saibene, Yanina Bellini and Turner, Heather and Peter, Dorothea Hug and Morandeira, Natalia Soledad and Bannert, Matt and Almazrouq, Batool and Hare, Elizabeth and others},
+  journal={PLoS computational biology},
+  volume={18},
+  number={7},
+  pages={e1010164},
+  year={2022},
+  publisher={Public Library of Science}
+}
